# bolt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/lib/: mod.rs  program.rs
src/lib/cmd/: init.rs  load.rs  mod.rs  test.rs  up.rs
src/lib/core/: deps.rs  directives.rs  errors.rs  execute.rs  load_deps.rs  mod.rs  policies.rs  process_args.rs  redirect.rs  setup_cmd.rs
src/lib/hooks/: extensions.rs  mod.rs
src/lib/inquirer/: confirm.rs  mod.rs  prompt.rs
src/lib/parser/: commands.rs  mod.rs  redirect.rs
src/lib/utils/: bolt_utils.rs  fs_utils.rs  mod.rs  resolve_alias.rs
