[package]
name = "bolt-cli"
version = "0.1.0"
edition = "2018"
description = "A CLI for managing multi-lingual monorepos"
license = "MIT"
repository = "https://github.com/ndaba1/bolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bolt"
path = "src/lib/mod.rs"

[dependencies]
colored = "2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
toml = "0.5.8"
ctrlc = "3.2.1"
signal-hook = "0.3.13"
cmder = "0.3.0"

