[package]
name = "bolt-cli"
version = "0.1.0"
edition = "2018"
description = "A CLI for managing multi-lingual monorepos"
license = "MIT"
repository = "https://github.com/ndaba1/bolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bolt"
path = "src/lib/mod.rs"

[dependencies]
colored = "2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
toml = "0.5.8"
ctrlc = "3.2.1"
signal-hook = "0.3.13"
cmder = "0.6.1"
directories = "4.0.1"
cached = "0.34.0"
termcolor = "1.1.3"
walkdir = "2.3.2"
crossbeam = "0.8.1"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"
regex = "1.5.6"
clap = "3.2.6"

